bug fix and Compose Enterprise details

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,9 +25,9 @@ a:hover, span.linklike:hover {
 }
 
 .newappIcon {
-	display: block;
-	margin: 0 auto;
+	display: inline;
 	max-width:200px;
+	float:left;
 }
 
 h1 {
